--- a/about.html
+++ b/about.html
@@ -274,7 +274,7 @@ footer {
 	<div class="row">
   <div class="column">
     <div class="card">
-      <img src="/girl.jpg" alt="Jane" style="width:100%">
+      <img src="girl.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Jessica</h2>
         <p class="title">Veteran Leader</p>
